# FlamappAI-EdgeViewer

./: README.md  README.me  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/flamappai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/flamappai/: MainActivity.kt
app/src/main/java/com/flamappai/camera/: CameraController.kt
app/src/main/java/com/flamappai/gl/: GLTextureView.kt
app/src/main/java/com/flamappai/nativebridge/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/flamappai/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: jni_utils.hpp  native_processor.cpp  opencv_processor.cpp  opencv_processor.hpp
web/: package.json  tsconfig.json
web/public/: index.html  style.css
web/src/: index.ts  package.json  tsconfig.json
